--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chairunnisa</title>
-    <link rel="stylesheet" href="assets/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet" />
@@ -24,7 +24,7 @@
     <main>
       <section id="about">
         <div class="profil">
-          <img src="assets/image/foto.png" alt="" />
+          <img src="assets/foto.png" alt="" />
         </div>
         <div class="content-a">
           <div>Hi, Iam <span class="big">Chairunnisa</span></div>
@@ -107,16 +107,16 @@
       </section>
       <section class="contact">
         <div>
-          <a href="https://github.com/ChairunnisaVn" target="blank"><img src="assets/image/github.png" alt="" /></a>
+          <a href="https://github.com/ChairunnisaVn" target="blank"><img src="assets/github.png" alt="" /></a>
         </div>
         <div>
-          <a href="https://www.instagram.com/_cn.nisa/" target="blank"><img src="assets/image/instagram.png" alt="" /></a>
+          <a href="https://www.instagram.com/_cn.nisa/" target="blank"><img src="assets/instagram.png" alt="" /></a>
         </div>
         <div>
-          <a href="https://www.linkedin.com/in/05-chairunnisa/" target="blank"><img src="assets/image/linkedin.png" alt="" /></a>
+          <a href="https://www.linkedin.com/in/05-chairunnisa/" target="blank"><img src="assets/linkedin.png" alt="" /></a>
         </div>
         <div>
-          <a href="#footer"><img src="assets/image/email.png" alt="" /></a>
+          <a href="#footer"><img src="assets/email.png" alt="" /></a>
         </div>
       </section>
     </main>
