--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#project">04.<span>Project</span></a>
       </div>
       <div class="resume">
-        <button><a href="" target="blank">Resume</a></button>
+        <button><a href="https://drive.google.com/file/d/1SA0es6Q1PZlZ11PGScTtWGwHWfNAEajv/view?usp=sharing" target="blank">Resume</a></button>
       </div>
     </header>
     <main>
